--- a/app/src/main/res/drawable/ic_subscription.xml
+++ b/app/src/main/res/drawable/ic_subscription.xml
@@ -2,12 +2,13 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorOnSurfaceVariant">
+    android:viewportHeight="24">
+  <!-- Círculo de fondo azul -->
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z"/>
+      android:fillColor="@color/subscription_primary"
+      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z"/>
+  <!-- Símbolo de renovación/autorenew -->
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M9,11H7v6h2V11zM13,11h-2v6h2V11zM17,11h-2v6h2V11z"/>
+      android:fillColor="#FFFFFF"
+      android:pathData="M12,6v3l4,-4 -4,-4v3c-4.42,0 -8,3.58 -8,8 0,1.57 0.46,3.03 1.24,4.26L6.7,14.8c-0.45,-0.83 -0.7,-1.79 -0.7,-2.8 0,-3.31 2.69,-6 6,-6zM18.76,7.74L17.3,9.2c0.44,0.84 0.7,1.79 0.7,2.8 0,3.31 -2.69,6 -6,6v-3l-4,4 4,4v-3c4.42,0 8,-3.58 8,-8 0,-1.57 -0.46,-3.03 -1.24,-4.26z"/>
 </vector>
