--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,13 +9,30 @@
         android:id="@+id/navigation_dashboard"
         android:name="com.koyeresolutions.ksexpire.ui.dashboard.DashboardFragment"
         android:label="@string/nav_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard">
+        
+        <action
+            android:id="@+id/action_dashboard_to_search"
+            app:destination="@id/navigation_search"
+            app:popUpTo="@id/navigation_dashboard"
+            app:popUpToSaveState="true"
+            app:restoreState="true" />
+            
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.koyeresolutions.ksexpire.ui.search.SearchFragment"
         android:label="@string/nav_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search">
+        
+        <!-- Argument para recibir filtro desde Dashboard -->
+        <argument
+            android:name="filter_type"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_about"
