--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -90,6 +90,16 @@
     <!-- Progress bar styles -->
     <style name="Widget.KSExpire.ProgressBar" parent="Widget.Material3.LinearProgressIndicator">
         <item name="trackCornerRadius">4dp</item>
-        <item name="indicatorCornerRadius">4dp</item>
     </style>
+
+    <!-- Full screen theme for image viewer -->
+    <style name="Theme.KSExpire.FullScreen" parent="Theme.KSExpire.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+
 </resources>
